--- a/Week4_Lab/Views/Pet/Details.cshtml
+++ b/Week4_Lab/Views/Pet/Details.cshtml
@@ -42,6 +42,13 @@
             @Html.DisplayFor(model => model.VetName)
         </dd>
 
+        @{
+            if (Model.NeedsCheckup)
+            {
+                <dd>Your pet is sick.</dd>
+            }
+        }
+
         <dt>
             @Html.DisplayNameFor(model => model.NextCheckup)
         </dt>
